# speaker-diarization

./: .dockerignore  .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
src/app/: Dockerfile  entrypoint.sh  main.py
src/app/core/: settings.py
src/app/models/: diarization.py
src/app/routers/: diarization.py
src/app/services/: transcription.py
