[project]
name = "speaker-diarization-api"
version = "0.1.0"
description = "A FastAPI API for speaker diarization using AWS Transcribe."

requires-python = ">=3.9"

dependencies = [
    "boto3>=1.39.3",
    "fastapi>=0.115.14",
    "pyannote-audio>=3.3.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "hatch>=1.14.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/infra"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default.scripts]
build-server = "docker build -t fastapi-app -f src/app/Dockerfile ."
run-server = "docker stop my-fastapi-container || true && docker rm my-fastapi-container || true && docker run -p 8000:80 --name my-fastapi-container fastapi-app"
